# OAI_MKO_client

./: .gitignore  CHANGELOG.md  create_py_from.bat  init.cfg  mko_unit.py  pyproject.toml
.github/workflows/: main.yml
.idea (1)/: modules.xml
oai_kpa_mko/: __init__.py  __main__.py  init.cfg  install_deps.bat  mko_unit.py  oai_data_parcer.py  oai_mko.py  ta1_usb_client_widget.py  ta1_usb_client_widget.ui
oai_kpa_mko/cfg/: oai_kpa_mko.json
