[tool.poetry]
name = "oai_kpa_mko"
version = "0.1.0"
description = ""
authors = ["crinitusfeles <crinitusfeles@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
oai_modbus = "^0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
